hecha las secciones de categorias

--- a/calzado.html
+++ b/calzado.html
@@ -725,18 +725,18 @@
 
     <div class="category-header">
         <h1>Calzado</h1>
-        <p>Los mejores modelos para tu rendimiento.</p>
+        <p>La comodidad a tus pies</p>
     </div>
 
     <div class="products-grid">
         
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Nike Quest 6">
+                <img src="Imagenes/Zapatilla5.jpeg" alt="Nike Vapor 13 Club TF">
             </div>
             <div class="product-info">
-                <h3>Nike Quest 6</h3>
-                <span class="product-price">$120.000</span>
+                <h3>Nike Vapor 13 Club TF</h3>
+                <span class="product-price">$178.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -744,11 +744,11 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Adidas Run">
+                <img src="Imagenes/Zapatilla2.jpg" alt="Adidas AE 1">
             </div>
             <div class="product-info">
-                <h3>Adidas Run Falcon</h3>
-                <span class="product-price">$115.000</span>
+                <h3>Adidas AE 1</h3>
+                <span class="product-price">$185.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -756,15 +756,29 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Puma Nitro">
+                <img src="Imagenes/Zapatilla3.webp" alt="Puma Suede XL">
             </div>
             <div class="product-info">
-                <h3>Puma Nitro</h3>
-                <span class="product-price">$130.000</span>
+                <h3>Puma Suede XL</h3>
+                <span class="product-price">$200.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
         </div>
+
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/Zapatilla4.jpeg" alt="Nike Jordan 1 Mid">
+            </div>
+            <div class="product-info">
+                <h3>Nike Jordan 1 Mid</h3>
+                <span class="product-price">$195.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
+
+        
 
         </div>
 
