--- a/remeras.html
+++ b/remeras.html
@@ -709,7 +709,7 @@
             <a href="Pagina.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar">
-                <input type="text" placeholder="Buscar calzado...">
+                <input type="text" placeholder="Buscar remeras...">
             </div>
             <div class="header-actions">
                 <button class="header-btn">🖤</button>
@@ -720,23 +720,23 @@
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Calzado</span>
+       <a href="Pagina.html">Inicio</a> > <span>Remeras</span>
     </div>
 
     <div class="category-header">
-        <h1>Calzado</h1>
-        <p>Los mejores modelos para tu rendimiento.</p>
+        <h1>Remeras</h1>
+        <p>Ajustada a tu gusto</p>
     </div>
 
     <div class="products-grid">
         
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Nike Quest 6">
+                <img src="Imagenes/Remera1.webp" alt="Puma">
             </div>
             <div class="product-info">
-                <h3>Nike Quest 6</h3>
-                <span class="product-price">$120.000</span>
+                <h3>Puma Hiper</h3>
+                <span class="product-price">$50.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -744,11 +744,11 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Adidas Run">
+                <img src="Imagenes/Remera2.webp" alt="Under Armour Training">
             </div>
             <div class="product-info">
-                <h3>Adidas Run Falcon</h3>
-                <span class="product-price">$115.000</span>
+                <h3>Under Armour Training</h3>
+                <span class="product-price">$45.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -756,16 +756,27 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Puma Nitro">
+                <img src="Imagenes/Remera3.jpeg" alt="Nike Dri Fit">
             </div>
             <div class="product-info">
-                <h3>Puma Nitro</h3>
-                <span class="product-price">$130.000</span>
+                <h3>Nike Dri Fit</h3>
+                <span class="product-price">$60.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
         </div>
 
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/Remera4.webp" alt="Adidas Sport Club">
+            </div>
+            <div class="product-info">
+                <h3>Adidas Sport Club</h3>
+                <span class="product-price">$58.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
         </div>
 
     <footer id="contacto">
