--- a/accesorios.html
+++ b/accesorios.html
@@ -709,7 +709,7 @@
             <a href="Pagina.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar">
-                <input type="text" placeholder="Buscar calzado...">
+                <input type="text" placeholder="Buscar accesorios...">
             </div>
             <div class="header-actions">
                 <button class="header-btn">🖤</button>
@@ -720,23 +720,23 @@
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Calzado</span>
+       <a href="Pagina.html">Inicio</a> > <span>Accesorios</span>
     </div>
 
     <div class="category-header">
-        <h1>Calzado</h1>
-        <p>Los mejores modelos para tu rendimiento.</p>
+        <h1>Accesorios</h1>
+        <p>Adaptables a tu necesidad</p>
     </div>
 
     <div class="products-grid">
         
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Nike Quest 6">
+                <img src="Imagenes/Accesorio1.webp" alt="Nike Vincha Swoosh">
             </div>
             <div class="product-info">
-                <h3>Nike Quest 6</h3>
-                <span class="product-price">$120.000</span>
+                <h3>Nike Vincha Swoosh</h3>
+                <span class="product-price">$20.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -744,11 +744,11 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Adidas Run">
+                <img src="Imagenes/Accesorio2.webp" alt="Oakley Lentes de Sol">
             </div>
             <div class="product-info">
-                <h3>Adidas Run Falcon</h3>
-                <span class="product-price">$115.000</span>
+                <h3>Oakley Lentes de Soln</h3>
+                <span class="product-price">$45.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -756,16 +756,27 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Puma Nitro">
+                <img src="Imagenes/Accesorio3.webp" alt="Adidas Muñequera">
             </div>
             <div class="product-info">
-                <h3>Puma Nitro</h3>
-                <span class="product-price">$130.000</span>
+                <h3>Adidas Muñequera</h3>
+                <span class="product-price">$15.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
         </div>
 
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/Accesorio4.webp" alt="Under Armour Protector Bucal">
+            </div>
+            <div class="product-info">
+                <h3>Under Armour Protector Bucal</h3>
+                <span class="product-price">$30.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
         </div>
 
     <footer id="contacto">
