ya terminada tmb los deportes y lo de mi usuario

--- a/Pagina.html
+++ b/Pagina.html
@@ -623,9 +623,9 @@
                     <span class="badge">0</span>
                 </button>
                 
-                <button class="header-btn" title="Mi Cuenta">
+                <a href="micuenta.html" class="header-btn" title="Mi Cuenta" style="text-decoration: none;">
                     👤
-                </button>
+                </a>
                 
                 <button class="menu-btn" onclick="toggleMenu()">
                     ☰ Menú
@@ -718,7 +718,6 @@
 <div class="promo-image"><img src="Imagenes/Gafas.jpg" alt=""></div>
 <div class="promo-content">
 <h3>Accesorios Deportivos</h3>
-<p>Todo lo que necesitas para entrenar</p>
 <span class="discount-badge">-30% OFF</span>
 </div>
 </div>
