--- a/accesorios.html
+++ b/accesorios.html
@@ -714,7 +714,9 @@
             <div class="header-actions">
                 <button class="header-btn">🖤</button>
                 <button class="header-btn">🛒</button>
-                <button class="header-btn">👤</button>
+                <a href="micuenta.html" class="header-btn" title="Mi Cuenta" style="text-decoration: none;">
+                👤
+                </a>
             </div>
         </div>
     </header>
