--- a/basket.html
+++ b/basket.html
@@ -704,34 +704,36 @@
             <a href="Pagina.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar">
-                <input type="text" placeholder="Buscar calzado...">
+                <input type="text" placeholder="Buscar en basquet...">
             </div>
             <div class="header-actions">
                 <button class="header-btn">🖤</button>
                 <button class="header-btn">🛒</button>
-                <button class="header-btn">👤</button>
+                <a href="micuenta.html" class="header-btn" title="Mi Cuenta" style="text-decoration: none;">
+                👤
+                </a>
             </div>
         </div>
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Calzado</span>
+       <a href="Pagina.html">Inicio</a> > <span>Basquet</span>
     </div>
 
     <div class="category-header">
-        <h1>Calzado</h1>
-        <p>Los mejores modelos para tu rendimiento.</p>
+        <h1>basquet</h1>
+        <p>De la tienda a la cancha.</p>
     </div>
 
     <div class="products-grid">
         
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Nike Quest 6">
+                <img src="Imagenes/basquet3.jpg" alt="Peak Camiseta Argentina">
             </div>
             <div class="product-info">
-                <h3>Nike Quest 6</h3>
-                <span class="product-price">$120.000</span>
+                <h3>Peak Camiseta Argentina</h3>
+                <span class="product-price">$140.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -739,11 +741,11 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Adidas Run">
+                <img src="Imagenes/basquet2.webp" alt="Wilson Pelota Nba">
             </div>
             <div class="product-info">
-                <h3>Adidas Run Falcon</h3>
-                <span class="product-price">$115.000</span>
+                <h3>Wilson Pelota Nba</h3>
+                <span class="product-price">$75.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -751,16 +753,28 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Puma Nitro">
+                <img src="Imagenes/basquet4.webp" alt="Nike Short La Lakers">
             </div>
             <div class="product-info">
-                <h3>Puma Nitro</h3>
-                <span class="product-price">$130.000</span>
+                <h3>Nike Short La Lakers</h3>
+                <span class="product-price">$90.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
         </div>
 
+
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/basquet1.jpg" alt="Nike Camiseta Boston Celtics">
+            </div>
+            <div class="product-info">
+                <h3>Nike Camiseta Boston Celtics</h3>
+                <span class="product-price">$150.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
         </div>
 
     <footer id="contacto">
