--- a/futbol.html
+++ b/futbol.html
@@ -704,63 +704,77 @@
             <a href="Pagina.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar">
-                <input type="text" placeholder="Buscar calzado...">
+                <input type="text" placeholder="Buscar en futbol...">
             </div>
             <div class="header-actions">
                 <button class="header-btn">🖤</button>
                 <button class="header-btn">🛒</button>
-                <button class="header-btn">👤</button>
+                <a href="micuenta.html" class="header-btn" title="Mi Cuenta" style="text-decoration: none;">
+                👤
+                </a>
             </div>
         </div>
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Calzado</span>
+       <a href="Pagina.html">Inicio</a> > <span>Futbol</span>
     </div>
 
     <div class="category-header">
-        <h1>Calzado</h1>
-        <p>Los mejores modelos para tu rendimiento.</p>
+        <h1>Futbol</h1>
+        <p>Lo mejor del deporte mas conocido.</p>
     </div>
 
     <div class="products-grid">
         
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Nike Quest 6">
+                <img src="Imagenes/futbol1.webp" alt="Adidas Camiseta Argentina">
             </div>
             <div class="product-info">
-                <h3>Nike Quest 6</h3>
+                <h3>Adidas Camiseta Argentina</h3>
+                <span class="product-price">$180.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
+
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/futbol2.webp" alt="Puma Guantes De Arquero Future Pro">
+            </div>
+            <div class="product-info">
+                <h3>Puma Guantes De Arquero Future Pro</h3>
+                <span class="product-price">$65.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
+
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/futbol3.webp" alt="Adidas Camiseta River Plate">
+            </div>
+            <div class="product-info">
+                <h3>Adidas Camiseta River Plate</h3>
+                <span class="product-price">$175.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
+
+
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/futbol4.webp" alt="Adidas Pelota Trionda">
+            </div>
+            <div class="product-info">
+                <h3>Adidas Pelota Trionda</h3>
                 <span class="product-price">$120.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
         </div>
-
-        <div class="product-item">
-            <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Adidas Run">
-            </div>
-            <div class="product-info">
-                <h3>Adidas Run Falcon</h3>
-                <span class="product-price">$115.000</span>
-                <button class="btn-buy">Agregar al Carrito</button>
-                <button class="fav">🤍</button>
-            </div>
-        </div>
-
-        <div class="product-item">
-            <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Puma Nitro">
-            </div>
-            <div class="product-info">
-                <h3>Puma Nitro</h3>
-                <span class="product-price">$130.000</span>
-                <button class="btn-buy">Agregar al Carrito</button>
-                <button class="fav">🤍</button>
-            </div>
-        </div>
-
         </div>
 
     <footer id="contacto">
