--- a/hockey.html
+++ b/hockey.html
@@ -704,34 +704,36 @@
             <a href="Pagina.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar">
-                <input type="text" placeholder="Buscar calzado...">
+                <input type="text" placeholder="Buscar en hockey...">
             </div>
             <div class="header-actions">
                 <button class="header-btn">🖤</button>
                 <button class="header-btn">🛒</button>
-                <button class="header-btn">👤</button>
+                <a href="micuenta.html" class="header-btn" title="Mi Cuenta" style="text-decoration: none;">
+                👤
+                </a>
             </div>
         </div>
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Calzado</span>
+       <a href="Pagina.html">Inicio</a> > <span>Hockey</span>
     </div>
 
     <div class="category-header">
-        <h1>Calzado</h1>
-        <p>Los mejores modelos para tu rendimiento.</p>
+        <h1>Hockey</h1>
+        <p>Asi o mejor para salir lo mas preparado.</p>
     </div>
 
     <div class="products-grid">
         
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Nike Quest 6">
+                <img src="Imagenes/hockey1.webp" alt="Under Armour Camiseta Argentina">
             </div>
             <div class="product-info">
-                <h3>Nike Quest 6</h3>
-                <span class="product-price">$120.000</span>
+                <h3>Under Armour Camiseta Argentina</h3>
+                <span class="product-price">$100.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -739,11 +741,11 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Adidas Run">
+                <img src="Imagenes/hockey2.jpg" alt="Nassau Palo">
             </div>
             <div class="product-info">
-                <h3>Adidas Run Falcon</h3>
-                <span class="product-price">$115.000</span>
+                <h3>Nassau Palo</h3>
+                <span class="product-price">$65.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -751,16 +753,27 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Puma Nitro">
+                <img src="Imagenes/hockey3.jpg" alt="Reves Bocha De Hockey">
             </div>
             <div class="product-info">
-                <h3>Puma Nitro</h3>
-                <span class="product-price">$130.000</span>
+                <h3>Reves Bocha De Hockey</h3>
+                <span class="product-price">$25.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
         </div>
 
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/hockey4.jpg" alt="Racoon Pechera Arquero Hockey">
+            </div>
+            <div class="product-info">
+                <h3>Racoon Pechera Arquero Hockey</h3>
+                <span class="product-price">$85.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
         </div>
 
     <footer id="contacto">
