--- a/otros-deportes.html
+++ b/otros-deportes.html
@@ -704,34 +704,36 @@
             <a href="Pagina.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar">
-                <input type="text" placeholder="Buscar calzado...">
+                <input type="text" placeholder="Buscar en otros...">
             </div>
             <div class="header-actions">
                 <button class="header-btn">🖤</button>
                 <button class="header-btn">🛒</button>
-                <button class="header-btn">👤</button>
+                <a href="micuenta.html" class="header-btn" title="Mi Cuenta" style="text-decoration: none;">
+                👤
+                </a>
             </div>
         </div>
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Calzado</span>
+       <a href="Pagina.html">Inicio</a> > <span>Otros</span>
     </div>
 
     <div class="category-header">
-        <h1>Calzado</h1>
-        <p>Los mejores modelos para tu rendimiento.</p>
+        <h1>Otros</h1>
+        <p>Los mejores deportes secundarios.</p>
     </div>
 
     <div class="products-grid">
         
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Nike Quest 6">
+                <img src="Imagenes/otrosd1.webp" alt="Arena Gorro De Natacion">
             </div>
             <div class="product-info">
-                <h3>Nike Quest 6</h3>
-                <span class="product-price">$120.000</span>
+                <h3>Arena Gorro De Natacion</h3>
+                <span class="product-price">$10.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -739,11 +741,11 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Adidas Run">
+                <img src="Imagenes/otrosd2.jpeg" alt="Prana Arco De Tiro">
             </div>
             <div class="product-info">
-                <h3>Adidas Run Falcon</h3>
-                <span class="product-price">$115.000</span>
+                <h3>Prana Arco De Tiro</h3>
+                <span class="product-price">$75.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
@@ -751,16 +753,27 @@
 
         <div class="product-item">
             <div class="product-img-container">
-                <img src="Imagenes/Zapatilla.png" alt="Puma Nitro">
+                <img src="Imagenes/otrosd3.webp" alt="Penaty Pelota De Handball">
             </div>
             <div class="product-info">
-                <h3>Puma Nitro</h3>
-                <span class="product-price">$130.000</span>
+                <h3>Penaty Pelota De Handball</h3>
+                <span class="product-price">$40.000</span>
                 <button class="btn-buy">Agregar al Carrito</button>
                 <button class="fav">🤍</button>
             </div>
         </div>
 
+        <div class="product-item">
+            <div class="product-img-container">
+                <img src="Imagenes/otrosd4.webp" alt="Babolat Pala De Padel">
+            </div>
+            <div class="product-info">
+                <h3>Babolat Pala De Padel</h3>
+                <span class="product-price">$170.000</span>
+                <button class="btn-buy">Agregar al Carrito</button>
+                <button class="fav">🤍</button>
+            </div>
+        </div>
         </div>
 
     <footer id="contacto">
