--- a/micuenta.html
+++ b/micuenta.html
@@ -574,7 +574,7 @@
 
     <header>
         <div class="header-container">
-            <a href="Pagina.html" class="logo-container">
+            <a href="index.html" class="logo-container">
                 <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             
@@ -588,7 +588,7 @@
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Mi Cuenta</span>
+       <a href="index.html">Inicio</a> > <span>Mi Cuenta</span>
     </div>
 
     <div class="account-container">
