--- a/pantalones.html
+++ b/pantalones.html
@@ -706,7 +706,7 @@
     
     <header>
         <div class="header-container">
-            <a href="Pagina.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
+            <a href="index.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar">
                 <input type="text" placeholder="Buscar pantalones...">
@@ -722,7 +722,7 @@
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Pantalones</span>
+       <a href="index.html">Inicio</a> > <span>Pantalones</span>
     </div>
 
     <div class="category-header">
