--- a/recuperar.html
+++ b/recuperar.html
@@ -134,7 +134,7 @@
 
     <header>
         <div class="header-container">
-            <a href="Pagina.html" class="logo-container">
+            <a href="index.html" class="logo-container">
                 <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div style="flex:1;"></div>
