--- a/nosotros.html
+++ b/nosotros.html
@@ -690,7 +690,7 @@
 
     <header>
         <div class="header-container">
-            <a href="Pagina.html" class="logo-container">
+            <a href="index.html" class="logo-container">
                 <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar" style="flex:1; max-width:500px; margin:0 2rem;">
@@ -699,7 +699,7 @@
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Sobre FOUL</span>
+       <a href="index.html">Inicio</a> > <span>Sobre FOUL</span>
     </div>
 
     <div class="overlay" onclick="toggleMenu()"></div>
