--- a/rugby.html
+++ b/rugby.html
@@ -701,7 +701,7 @@
     
     <header>
         <div class="header-container">
-            <a href="Pagina.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
+            <a href="index.html" class="logo-container"> <img src="Imagenes/LogoPrincipal.png" alt="FOUL Logo" class="logo-img">
             </a>
             <div class="search-bar">
                 <input type="text" placeholder="Buscar en rugby...">
@@ -717,7 +717,7 @@
     </header>
 
     <div class="breadcrumb">
-       <a href="Pagina.html">Inicio</a> > <span>Rugby</span>
+       <a href="index.html">Inicio</a> > <span>Rugby</span>
     </div>
 
     <div class="category-header">
